GoogleHipsterPolicies/AllowHTTPIngress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Policy to allow ingress HTTP to frontend"
metadata:
  name: "allow-ingress"
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  ingress:
    - toServices:
        - {}
