GoogleHipsterPolicies/FrontendIngress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Policy to allow ingress HTTP to frontend"
metadata:
  name: "frontend-deny-ingress"
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend-external
        app: loadgenerator
