GoogleHipsterPolicies/ShippingEgress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Deny all egress from shipping service"
metadata:
  name: "shipping-deny-all"
spec:
  endpointSelector:
    matchLabels:
      app: shippingservice
  egress:
  - {}
